Completed dark mode of Aplayer fixed mode

--- a/source/css/yuuki/aplayer.styl
+++ b/source/css/yuuki/aplayer.styl
@@ -20,19 +20,12 @@
 .aplayer
     transition: all .5s ease-out;
 
-// .aplayer .aplayer-miniswitcher
-//     background: white !important;
-    // &:before
-    //     content: ''
-    //     width: 200%
-    //     height: 100%
-
 .aplayer-lrc 
     p
         font-family: '"Noto Serif SC", "PingFang SC", "Microsoft YaHei"';
         transition 0.1s all ease
         -webkit-transition 0.1s all ease
-        text-shadow 0 0 1px #fff !important;
+        text-shadow 0 0 2px #fff !important;
         color: rgb(96, 96, 96) !important;
     .aplayer-lrc-current
         font-size: 16px !important;
